tests/compile_failures/classes/non_display_fields.rs
use dioxus_sugar::classes;

enum Value {
    One,
    Two,
    Three,
}

#[classes(value)]
struct Props {
    value: Value,
}

fn main() {}